[gd_scene load_steps=11 format=3 uid="uid://dbuqtmctjwetc"]

[ext_resource type="Script" path="res://src/menus/menu/Menu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cgidc6ws42fda" path="res://src/utils/background/Background.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://ck8h8kkj60iwa" path="res://assets/ui/bars/bars_center/Decorated_bar.png" id="3_icwil"]
[ext_resource type="Texture2D" uid="uid://de2tpgcubddv7" path="res://assets/ui/buttons/buttons_square/11_right_arrow.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bxbxdypqdr2jn" path="res://assets/ui/buttons/buttons_square/11_right_arrow_pick.png" id="5"]
[ext_resource type="Texture2D" uid="uid://ci6mg8ovjriql" path="res://assets/ui/buttons/buttons_rect/1_orange_button_pick.png" id="6"]
[ext_resource type="Texture2D" uid="uid://diaaemenansya" path="res://assets/ui/buttons/buttons_rect/1_orange_button.png" id="7"]
[ext_resource type="Texture2D" uid="uid://ctuk6h7oy83p6" path="res://assets/ui/buttons/buttons_rect/1_white_button_pick.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dch0e63ito1tq" path="res://assets/ui/buttons/buttons_rect/1_white_button.png" id="10"]
[ext_resource type="Texture2D" uid="uid://b5xrx2klxd5sd" path="res://assets/ui/decors/Decor_Title_options2.png" id="11"]

[node name="Menu" type="Node2D"]
script = ExtResource("1")

[node name="Background" parent="." instance=ExtResource("3")]

[node name="Control" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 2048.0
metadata/_edit_use_anchors_ = true

[node name="MenuBar" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -64.0
offset_right = 512.0
offset_bottom = 960.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_icwil")
expand_mode = 1

[node name="PlayButton" type="TextureButton" parent="Control/MenuBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -388.0
offset_right = 256.0
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7")
texture_pressed = ExtResource("6")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/MenuBar/PlayButton"]
texture_filter = 1
layout_mode = 0
offset_top = 4.0
offset_right = 512.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 40
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HangarButton" type="TextureButton" parent="Control/MenuBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -224.0
offset_right = 256.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7")
texture_pressed = ExtResource("6")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/MenuBar/HangarButton"]
texture_filter = 1
layout_mode = 0
offset_right = 512.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 40
text = "Hangar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="Control/MenuBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -64.0
offset_right = 256.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7")
texture_pressed = ExtResource("6")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/MenuBar/OptionsButton"]
texture_filter = 1
layout_mode = 0
offset_right = 512.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 40
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="Control/MenuBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = 256.0
offset_right = 256.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("10")
texture_pressed = ExtResource("9")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/MenuBar/ExitButton"]
texture_filter = 1
layout_mode = 0
offset_right = 512.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 40
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuHeading" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -384.0
offset_top = 160.0
offset_bottom = 192.0
grow_horizontal = 0
texture = ExtResource("11")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="BackButton" type="TextureButton" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -192.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")
stretch_mode = 5

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -352.0
offset_top = 64.0
offset_right = -32.0
offset_bottom = 192.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 80
text = "Menu"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="tree_exited" from="." to="." method="_on_Menu_tree_exited"]
[connection signal="pressed" from="Control/MenuBar/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control/MenuBar/HangarButton" to="." method="_on_HangarButton_pressed"]
[connection signal="pressed" from="Control/MenuBar/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Control/MenuBar/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
